openapiの記載を変更
